# dataframe_lib

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  plan.md  project.md  report.md
.claude/: settings.local.json
include/: Compute.hpp  DAGNode.hpp  EagerDataFrame.hpp  Expression.hpp  IO.hpp  LazyDataFrame.hpp  QueryOptimizer.hpp
include/dataframelib/: dataframelib.h
src/: Compute.cpp  DAGNode.cpp  EagerDataFrame.cpp  Expression.cpp  IO.cpp  LazyDataFrame.cpp  QueryOptimizer.cpp
tests/: test_eager.cpp  test_expressions.cpp  test_lazy.cpp  test_optimizer.cpp
